# minishell

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  run_test.sh  setup.sh
includes/: 21ast.h  minishell.h  sh1.h
srcs/: 21ast.c  21ast_build.c  21ast_clean.c  21ast_exec.c  21ast_read.c  build_props.c  builtin_cd.c  builtin_env.c  builtin_exit.c  builtin_getenv.c  builtin_setenv.c  builtin_unsetenv.c  cd_goto.c  cd_is_valid.c  cd_opt.c  cd_symbolic.c  chdir_var.c  cleaner.c  display_env.c  empty_extern_environ.c  env_errors.c  environ.c  format_path.c  input_format.c  main.c  mainsplit.c  maintrim.c  manage_builtins.c  manage_environ.c  manage_fork.c  manage_interpretor.c  manage_link.c  manage_path.c  merge_environ.c  minishell_main.c  misc_array.c  misc_cd.c  misc_cd2.c  misc_interpretor.c  misc_parse_env.c  (+14 more)
tests/: test_minishell.py  tools.py
tests/test_resources/: dotdot  file01
