cmake_minimum_required(VERSION 3.3)
project(sh1)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
        includes/minishell.h
        libft/includes/libft.h
        libft/srcs/Darwin/ft_isalnum.c
        libft/srcs/Darwin/ft_isalpha.c
        libft/srcs/Darwin/ft_isdigit.c
        libft/srcs/Darwin/ft_isprint.c
        libft/srcs/Linux/ft_isalnum.c
        libft/srcs/Linux/ft_isalpha.c
        libft/srcs/Linux/ft_isdigit.c
        libft/srcs/Linux/ft_isprint.c
        libft/srcs/ft_absint.c
        libft/srcs/ft_atoi.c
        libft/srcs/ft_bubble_sort.c
        libft/srcs/ft_bzero.c
        libft/srcs/ft_isalnum.c
        libft/srcs/ft_isalpha.c
        libft/srcs/ft_isascii.c
        libft/srcs/ft_isblank.c
        libft/srcs/ft_isdigit.c
        libft/srcs/ft_isprint.c
        libft/srcs/ft_itoa.c
        libft/srcs/ft_lstadd.c
        libft/srcs/ft_lstadd_end.c
        libft/srcs/ft_lstdel.c
        libft/srcs/ft_lstdelone.c
        libft/srcs/ft_lstiter.c
        libft/srcs/ft_lstmap.c
        libft/srcs/ft_lstnew.c
        libft/srcs/ft_lstsplit.c
        libft/srcs/ft_lz_strsplit.c
        libft/srcs/ft_memalloc.c
        libft/srcs/ft_memccpy.c
        libft/srcs/ft_memchr.c
        libft/srcs/ft_memcmp.c
        libft/srcs/ft_memcpy.c
        libft/srcs/ft_memdel.c
        libft/srcs/ft_memmove.c
        libft/srcs/ft_memset.c
        libft/srcs/ft_nbrlen.c
        libft/srcs/ft_putchar.c
        libft/srcs/ft_putchar_fd.c
        libft/srcs/ft_putendl.c
        libft/srcs/ft_putendl_fd.c
        libft/srcs/ft_putnbr.c
        libft/srcs/ft_putnbr_fd.c
        libft/srcs/ft_putstr.c
        libft/srcs/ft_putstr_fd.c
        libft/srcs/ft_remove_useless.c
        libft/srcs/ft_strcasestr.c
        libft/srcs/ft_strcat.c
        libft/srcs/ft_strchr.c
        libft/srcs/ft_strclr.c
        libft/srcs/ft_strcmp.c
        libft/srcs/ft_strcpy.c
        libft/srcs/ft_strdel.c
        libft/srcs/ft_strdup.c
        libft/srcs/ft_strequ.c
        libft/srcs/ft_striter.c
        libft/srcs/ft_striteri.c
        libft/srcs/ft_strjoin.c
        libft/srcs/ft_strlcat.c
        libft/srcs/ft_strlen.c
        libft/srcs/ft_strmap.c
        libft/srcs/ft_strmapi.c
        libft/srcs/ft_strncat.c
        libft/srcs/ft_strncmp.c
        libft/srcs/ft_strncpy.c
        libft/srcs/ft_strndup.c
        libft/srcs/ft_strnequ.c
        libft/srcs/ft_strnew.c
        libft/srcs/ft_strnstr.c
        libft/srcs/ft_strrchr.c
        libft/srcs/ft_strsplit.c
        libft/srcs/ft_strstr.c
        libft/srcs/ft_strsub.c
        libft/srcs/ft_strtrim.c
        libft/srcs/ft_tolower.c
        libft/srcs/ft_toupper.c

        srcs/input_format.c
        srcs/main.c
        srcs/manage_path.c
        srcs/misc_prompt.c
        srcs/misc_string.c
        srcs/build_props.c
        srcs/cleaner.c
        srcs/update_last_environ.c
        srcs/manage_builtins.c
        srcs/builtin_env.c
        srcs/builtin_unsetenv.c
        srcs/manage_interpretor.c
        srcs/builtin_setenv.c
        srcs/builtin_getenv.c
        srcs/builtin_cd.c
        srcs/empty_extern_environ.c
        srcs/builtin_exit.c
        srcs/misc_parse_env.c
        srcs/parse_env.c
        srcs/env_errors.c
        srcs/display_env.c
        srcs/run_under_env.c
        srcs/manage_link.c
        srcs/merge_environ.c
        srcs/misc_interpretor.c
        srcs/misc_read.c
        srcs/reader.c
        srcs/syntax.c
        srcs/cd_goto.c
        srcs/misc_cd.c
        srcs/manage_fork.c
        srcs/format_path.c srcs/cd_opt.c srcs/misc_prompt2.c srcs/cd_is_valid.c srcs/misc_cd2.c)

add_executable(sh1 ${SOURCE_FILES})